<resources>
    <string name="app_name">Akshay_Final_Project</string>

    <string name="message_title">Network Error</string>
    <string name="message_text">No internet connection</string>
    <string name="quit">Quit</string>

    <string name="search_button_text">Search</string>
    <string name="search_user_hint">Search user</string>
    <string name="min_repos">min. # repos</string>
    <string name="followers">followers</string>
    <string name="page_size">page size</string>
    <string name="min_followers">min. # followers</string>
    <string name="repos">repos</string>

    <string name="menu_about">About</string>
    <string name="menu_details">Details</string>
    <string name="menu_results">Results</string>
    <string name="menu_web_view">Web View</string>

    <string name="user_score">Score: %1$s</string>
    <string name="user_login">Login: %1$s</string>
    <string name="user_id">ID: %1$s</string>
    <string name="image_description">Avatar</string>

    <string name="user_name">Name: %1$s</string>
    <string name="placeholder_url">url</string>
    <string name="user_location">Location: %1$s</string>
    <string name="user_company">Company: %1$s</string>
    <string name="user_followers">Followers: %1$s</string>
    <string name="user_public_gists">Public gists: %1$s</string>
    <string name="user_public_repos">Public repos: %1$s</string>
    <string name="user_last_update">Last update: %1$s</string>
    <string name="user_account_created">Account created: %1$s</string>

    <string name="about_app_name_version">GitHub Searcher v1.0.0</string>
    <string name="about_created_by">Akshay Mahajan</string>
    <string name="about_company">MAD9132</string>
    <string name="about_email">maha0134@algonquinlive.com</string>
    <string name="about_website">https://portfolio-akshay-mahajan.netlify.app/</string>


    <string name="no_results">No results for: %1$s</string>

    <!--    Key Strings: do not translate-->
    <string name="user_data_key">USER_DATA</string>
    <string name="url_key">URL_KEY</string>
    <string name="details_title_key">ACTIONBAR_TITLE</string>
    <string name="details_url_key">DETAILS_URL</string>
    <string name="details_html_url_key">DETAILS_HTML_URL</string>

    <string name="repos_key">REPOS_KEY</string>
    <string name="followers_key">FOLLOWERS_KEY</string>
    <string name="page_size_key">PAGE_SIZE_KEY</string>
</resources>